# cto

./: .codeqlconfig  .cursorignore  .cursorrules  .gitignore  .gitlab-ci.yml  .gitmodules  .jscpd.json  .markdownlint.yaml  .mcp.json  .pre-commit-config.yaml  .ralph-last-branch  .release-please-manifest.json  .releaserc.gitlab.json  .releaserc.json  .repomixignore  .secrets.baseline  .semgrepignore  .shellcheckrc  .stop-hook-executed  .yamllint.yaml  5dlabs-profile-README.md  AGENTS.md  ATLAS_COMPLETE_FIX.md  ATLAS_CONFLICT_RESOLUTION_1640.md  ATLAS_FINAL_FIX_PR1357.md  ATLAS_FINAL_SESSION_SUMMARY.md  ATLAS_FIX_SUMMARY.md  ATLAS_GUARDIAN_PR1636_COMPLETE.md  ATLAS_GUARDIAN_PR1638_COMPLETE.md  ATLAS_GUARDIAN_PR1645_COMPLETE.md  ATLAS_GUARDIAN_SESSION_2025_11_24_COMPLETE.md  ATLAS_GUARDIAN_SESSION_2025_11_24_PR1644_COMPLETE.md  ATLAS_GUARDIAN_SESSION_COMPLETE.md  ATLAS_GUARDIAN_SESSION_COMPLETE_2025_11_24_21_37.md  ATLAS_GUARDIAN_SESSION_COMPLETE_2025_11_24_22_00.md  ATLAS_GUARDIAN_SESSION_PR1627_COMPLETE.md  ATLAS_GUARDIAN_SESSION_PR1636.md  ATLAS_PR_GUARDIAN_SUMMARY.md  ATLAS_SESSION_2025_11_24_COMPLETE.md  ATLAS_SESSION_2025_11_24_PR1646_COMPLETE.md  (+176 more)
avatar/agent/: Dockerfile  README.md  agent.py  contract.md  pyproject.toml
avatar/agent-minimal/: .dockerignore  Dockerfile  README.md  pyproject.toml  worker.py
avatar/agent/morgan_avatar_agent/: __init__.py  avatar_provider.py  config.py  echomimic_avatar.py  latency.py  musetalk_avatar.py  musetalk_inference.py  musetalk_nats_client.py  persona_preprocess.py  providers.py  startup.py
avatar/agent/scripts/: add_gpu_to_network.py  check_gpu_node.sh  check_rke2_server.sh  configure_netplan.sh  fix_network.sh  fix_port_security.py  join_rke2.sh  ovh_check_instance.py  ovh_debug.py  ovh_list_networks.py  ovh_provision.py  ovh_reprovision_gpu.py  ovh_test_create.py  port_forward_openclaw_optimist.sh  provision_gpu_node.sh  provision_gpu_node_2.sh  reboot_and_verify.sh  summarize_latency.py
avatar/agent/tests/: test_avatar_provider.py  test_config.py  test_latency.py  test_musetalk_avatar.py  test_musetalk_nats_client.py  test_persona_preprocess.py  test_startup.py
cli/: Cargo.toml  QUICKSTART.md  README.md  clippy.toml
cli/src/: config.rs  main.rs  ui.rs  validator.rs
cli/src/agent_defs/: ascii_art.rs  mod.rs
cli/src/commands/: install.rs
cli/src/installer/: cluster.rs  components.rs  config_generator.rs  mod.rs
cli/src/tui/: mod.rs
crates/acp-runtime/: Cargo.toml
crates/acp-runtime/src/: client.rs  interrupt_bridge.rs  lib.rs  registry.rs  server.rs  types.rs
crates/cli/: Cargo.toml  clippy.toml
crates/cli/src/: adapter.rs  base_adapter.rs  factory.rs  lib.rs  types.rs
crates/cloud/: Cargo.toml
crates/cloud/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: agents.rs  generator.rs  lib.rs  tools.rs  types.rs
crates/controller/: Cargo.toml  clippy.toml
crates/controller/installer/: Cargo.toml
crates/controller/src/: lib.rs
crates/controller/tests/: agent_cli_matrix_tests.rs  e2e_template_tests.rs  task_3_comprehensive_tests.rs
crates/cost/: Cargo.toml  clippy.toml
crates/cost/src/: lib.rs
crates/dex-indexer/: Cargo.toml
crates/dex-indexer/src/: config.rs  db.rs  decoder.rs  error.rs  lib.rs  main.rs  subscriber.rs  writer.rs
crates/experience/: Cargo.toml
crates/experience/src/: lib.rs
crates/gpu/: Cargo.toml
crates/gpu/src/: lib.rs
crates/healer/: Cargo.toml  heal-config.json
crates/healer/docs/: README.md  ci-remediation-design.md  current-functionality.md  desired-functionality.md  play-orchestration-design.md
crates/healer/src/: dedup.rs  github.rs  k8s.rs  lib.rs  loki.rs  main.rs  prometheus.rs  reconcile.rs  scanner.rs  templates.rs
crates/healer/tests/: play_integration.rs
crates/installer/: COORDINATION-RESPONSE.md  Cargo.toml  QUICKSTART.md  README.md  clippy.toml
crates/installer/src/: apps_repo.rs  bare_metal.rs  bootstrap.rs  config.rs  gitops.rs  kubeconfig.rs  lib.rs  main.rs  openbao.rs  orchestrator.rs  state.rs  ui.rs  validator.rs
crates/integrations/: Cargo.toml
crates/integrations/src/: client.rs  config.rs  github_client.rs  lib.rs  models.rs  server.rs  webhooks.rs
crates/linear-sync/: Cargo.toml
crates/linear-sync/src/: activities.rs  client.rs  emitter.rs  lib.rs  testing.rs
crates/linear-sync/tests/: e2e_cli_tests.rs
crates/metal/: Cargo.toml
crates/metal/examples/: scaleway_cluster.rs  scaleway_test.rs  talos_install.rs  talos_install_machine.rs
crates/metal/src/: cilium.rs  clustermesh.rs  inventory.rs  lib.rs  stack.rs  state.rs
crates/notify/: Cargo.toml  clippy.toml
crates/notify/mcp/: clippy.toml
crates/notify/src/: error.rs  events.rs  lib.rs
crates/play-launcher/: Cargo.toml
crates/play-launcher/src/: config.rs  launcher.rs  main.rs
crates/pm/: Cargo.toml
crates/pm-lite/: Cargo.toml
crates/pm-lite/src/: github_app.rs  lib.rs
crates/pm/src/: activities.rs  client.rs  config.rs  emitter.rs  lib.rs  models.rs  morgan_hooks.rs  onboarding.rs  server.rs  webhooks.rs
crates/pm/test-fixtures/: ci-failure.json  mention-comment.json
crates/research/: Cargo.toml  README.md  clippy.toml
crates/scm/: Cargo.toml
crates/tenant-operator/: Cargo.toml
crates/tools/: Cargo.toml
heal/: Cargo.toml  Dockerfile  cto-config.json  dist-workspace.toml  heal-config.json
heal/k8s/: deployment-talos.yaml  deployment.yaml  pvc.yaml  values.yaml
heal/prompts/: a1-comment-order.md  a2-silent-failure.md  a3-stale-progress.md  a4-approval-loop.md  a5-post-tess-ci.md  a7-pod-failure.md  a8-step-timeout.md  a9-stuck-coderun.md  a9-success-completion.md  success-completion.md
heal/src/: dedup.rs  k8s.rs  main.rs
monitor/: Cargo.toml  clippy.toml  cto-config.json
monitor/src/: main.rs  security_test.rs  test_watch_validation.rs
talos-orchestrator/: .gitignore  Cargo.toml  README.md
talos-orchestrator/examples/: install-server.rs
talos-orchestrator/scripts/: download-talos-image.sh
talos-orchestrator/src/: main.rs
tasks/: Cargo.toml
tasks/alerthub/: prd.json
tasks/src/: errors.rs  lib.rs
(+9304 files in other folders)
