[workspace]
resolver = "2"
members = [
    "crates/cli",
    "crates/config",
    "crates/controller",
    "crates/installer",
    "crates/experience",
    "crates/gpu",
    "crates/healer",
    "crates/intake",
    "crates/metal",
    "crates/notify",
    "crates/pm",
    "crates/research",
    "crates/tenant-operator",
    "crates/tools",
    "crates/utils",
]

[workspace.package]
version = "0.2.31"
edition = "2021"
authors = ["5D team"]
license = "AGPL-3.0"
repository = "https://github.com/5dlabs/cto"

[workspace.dependencies]
# Web framework
axum = "0.8.8"
tokio = { version = "1.49", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["trace", "cors", "limit", "timeout"] }

# Kubernetes
kube = { version = "0.93", features = ["runtime", "derive", "client", "ws"] }
kube-derive = "0.93"
k8s-openapi = { version = "0.22", features = ["v1_30"] }
schemars = "1.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "2.0.18"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# OpenTelemetry
opentelemetry = "0.30.0"
opentelemetry-otlp = { version = "0.31", features = ["tonic"] }
opentelemetry_sdk = { version = "0.30", features = ["rt-tokio"] }
tracing-opentelemetry = "0.31.0"

# CLI
clap = { version = "4.5", features = ["derive", "env", "cargo"] }
dialoguer = "0.11"
indicatif = "0.17"
colored = "3.1.1"

# HTTP Client
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
eventsource-client = "0.15.0"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Text processing
regex = "1.10"
handlebars = "6.4.0"

# Testing
mockall = "0.13"
wiremock = "0.6"
serial_test = "3.3"

# UUID generation
uuid = { version = "1.19", features = ["v4", "serde"] }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

# CI profile: optimized for fast builds while maintaining good runtime performance
# Use with: cargo build --profile ci
[profile.ci]
inherits = "release"
lto = false
opt-level = 2
codegen-units = 16
debug = false
strip = true
incremental = false

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

