[package]
name = "heal"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Self-healing platform monitor - detects issues and spawns remediation agents"
homepage = "https://github.com/5dlabs/cto"

[[bin]]
name = "heal"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { workspace = true }
colored = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Async runtime
tokio = { workspace = true }

# HTTP Client for Victoria Logs API
reqwest = { workspace = true }

# Time handling
chrono = { workspace = true }

# UUID generation
uuid = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Regex for secret redaction
regex = "1"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

