[package]
name = "talos-orchestrator"
version = "0.1.0"
edition = "2021"
description = "Automated Talos Linux installation on Scaleway bare metal"
authors = ["5D Labs"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Scaleway API
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

# SSH (rescue mode)
ssh2 = "0.9"

# Display derive for state machine
strum = { version = "0.25", features = ["derive"] }

# Configuration
clap = { version = "4", features = ["derive"] }
config = "0.13"

# Utilities
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
retry = "2.0"
indicatif = "0.17"
console = "0.15"
