[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "morgan-avatar-agent"
version = "0.1.0"
description = "Low-latency talking avatar agent for Morgan."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "httpx",
  "livekit",
  "livekit-agents[cartesia,deepgram,elevenlabs,openai,silero,turn-detector]",
  "livekit-plugins-noise-cancellation",
  "opencv-python",
  "python-dotenv",
  "rich",
  "torch",
  "transformers",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]
legacy = [
  "livekit-plugins-lemonslice",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["morgan_avatar_agent*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
