[package]
name = "cto-cost"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Cost analysis and optimization for AI/LLM providers (OpenAI, Anthropic)"

[dependencies]
# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# HTTP Client
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Time
chrono = { workspace = true }

# URL handling
url = "2.5"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
wiremock = { workspace = true }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
