[package]
name = "dex-indexer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Solana DEX swap indexer — Yellowstone gRPC → QuestDB"

[[bin]]
name = "dex-indexer"
path = "src/main.rs"

[dependencies]
# Yellowstone gRPC
yellowstone-grpc-client = "12.1"
yellowstone-grpc-proto = "12.1"
tonic = "0.14"

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }

# QuestDB
questdb-rs = "6.0"

# Config & CLI
clap = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utilities
bs58 = "0.5"
dashmap = "6"
chrono = { workspace = true }
