[package]
name = "integrations"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Alerting and notification integrations (Discord, Slack, PagerDuty, etc.) for CTO platform"

[dependencies]
# Workspace dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
reqwest.workspace = true
chrono.workspace = true

# Async trait for NotifyChannel
async-trait.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
