[package]
name = "metal"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Bare metal provisioning for CTO Platform"

[[bin]]
name = "metal"
path = "src/bin/metal.rs"

[dependencies]
# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# HTTP Client
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Time
chrono = { workspace = true }

# URL handling
url = "2.5"

# YAML
serde_yaml = { workspace = true }

# UUID
uuid = { workspace = true }

# Cryptography
sha1 = { workspace = true }
hex = { workspace = true }

# CLI
clap = { workspace = true }

# Crypto / encoding (OVH signature)
sha1 = "0.10"
hex = "0.4"

# YAML (on-prem inventory)
serde_yaml = { workspace = true }

# UUID (on-prem server IDs)
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
wiremock = { workspace = true }

