[package]
name = "notify"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Notification system for CTO platform events"

[dependencies]
# Async runtime
tokio.workspace = true
async-trait.workspace = true

# HTTP client
reqwest.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true

# Logging
tracing.workspace = true

# Time handling
chrono.workspace = true

