[package]
name = "research"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Twitter/X bookmark research pipeline - monitors, analyzes, and curates technical content"
homepage = "https://github.com/5dlabs/cto"

[[bin]]
name = "research"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { workspace = true }
colored = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }

# HTTP Client
reqwest = { workspace = true }

# Time handling
chrono = { workspace = true }

# UUID generation
uuid = { workspace = true }
regex.workspace = true

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Template rendering
handlebars = { workspace = true }

# Browser automation (pure Rust)
chromiumoxide = { version = "0.8", features = ["tokio-runtime"], default-features = false }

# Local crates
tasks = { path = "../tasks" }
scraper = "0.24.0"

[dev-dependencies]
# For smoke tests
tokio-test = "0.4"

[lints.clippy]
# Deny pedantic lints (makes CI fail) but allow specific ones below
pedantic = { level = "deny", priority = -1 }
# Allowed lints - these override the pedantic deny
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
trivially_copy_pass_by_ref = "allow"
redundant_closure_for_method_calls = "allow"
struct_field_names = "allow"
match_same_arms = "allow"
similar_names = "allow"
too_many_lines = "allow"
unused_async = "allow"
single_match_else = "allow"
manual_let_else = "allow"
uninlined_format_args = "allow"
map_unwrap_or = "allow"
too_many_arguments = "allow"
needless_pass_by_value = "allow"
unnecessary_wraps = "allow"
items_after_statements = "allow"

[lints.rust]
unexpected_cfgs = "allow"

