[package]
name = "scm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Unified SCM abstraction for GitHub and GitLab"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64 = "0.22"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
urlencoding = "2.1"
